changes in html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>ShoPifY</title>
         <link rel="stylesheet" href="./ecommerce.css" />
         <link
             href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <div class="logo"><a href="#">Shopify</a></div>
+            <div class="logo"><a href="#">ShoPifY</a></div>
             <div class="menu">
                 <a href=""><ion-icon name="close" class="close"></ion-icon></a>
                 <ul>
@@ -320,7 +320,7 @@
             </div>
         </section>
         <footer>
-            <div class="footer0"><h1>ShoPperZ</h1></div>
+            <div class="footer0"><h1>ShoPifY</h1></div>
             <div class="footer1">
                 Connect with us at
                 <div class="social-media">
@@ -365,7 +365,7 @@
             </div>
             <div class="footer3">
                 Copyright ©
-                <h4>ShoPperZ</h4>
+                <h4>ShoPifY</h4>
                 2021-2028
             </div>
         </footer>
